[package]
name = "tz-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono-tz = { version = "0.10.4", features = ["case-insensitive"] }
clap = { version = "4.5.45", features = ["derive"] }
either = "1.15.0"
regex = "1.11.1"

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["alloc", "std", "clock", "now", ]
