[package]
name = "tz-rust"
version = "0.2.2"
edition = "2024"
description = "Timezone converter"

[dependencies]
chrono-tz = { version = "0.10.4", features = ["case-insensitive"] }
clap = { version = "4.5.45", features = ["derive"] }

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["alloc", "std", "clock", "now", ]

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
lto = true

[[bin]]
name = "tz"
path = "src/main.rs"
